Navigation menu spacing fix for mobile

--- a/resources/css/nav.css
+++ b/resources/css/nav.css
@@ -404,8 +404,8 @@ nav.navbar {
         transition: all .3s ease;
     }
 
-    .dropdown:hover > .dropdown-menu {
-        box-shadow: 0px 0px 15px 3px rgba(90,90,90,0.2);
+    .dropdown:hover>.dropdown-menu {
+        box-shadow: 0px 0px 15px 3px rgba(90, 90, 90, 0.2);
         transform: scaleY(1);
         opacity: 1;
     }
@@ -445,6 +445,14 @@ nav.navbar {
     justify-content: center;
     align-items: center;
     gap: 5px;
+}
+
+.nav-top__list-item>ul>li {
+    padding: .4em;
+}
+
+.nav-top__list-item>ul>li:hover a {
+    color: var(--primary-color);
 }
 
 .caret::before {
